--- a/FizzBuzz/FizzBuzz.Web/FizzBuzz.Web.csproj
+++ b/FizzBuzz/FizzBuzz.Web/FizzBuzz.Web.csproj
@@ -153,6 +153,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IOutputStringService.cs" />
+    <Compile Include="Repository\OutputStringService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -210,6 +212,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz.Business\FizzBuzz.Business.csproj">
+      <Project>{A0738524-6EBE-484C-93B2-C887C5769AFB}</Project>
+      <Name>FizzBuzz.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
