--- a/FizzBuzz/FizzBuzz.Business.Tests/FizzBuzz.Business.Tests.csproj
+++ b/FizzBuzz/FizzBuzz.Business.Tests/FizzBuzz.Business.Tests.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.7\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,7 +63,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessClasses\DateProviderTests.cs" />
     <Compile Include="BusinessClasses\DefaultModuloCheckTests.cs" />
     <Compile Include="BusinessClasses\NumberModuloByFifteenCheckTests.cs" />
     <Compile Include="BusinessClasses\NumberModuloByFiveCheckTests.cs" />
