--- a/FizzBuzz/FizzBuzz.Business.Tests/packages.config
+++ b/FizzBuzz/FizzBuzz.Business.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
   <package id="Moq" version="4.12.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
