--- a/FizzBuzz/FizzBuzz.Web/FizzBuzz.Web.csproj
+++ b/FizzBuzz/FizzBuzz.Web/FizzBuzz.Web.csproj
@@ -162,14 +162,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\FizzBuzzController.cs" />
+    <Compile Include="CustomHTMLHelper\FizzBuzzCustomHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\NumberViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IOutputStringService.cs" />
-    <Compile Include="Repository\OutputStringService.cs" />
+    <Compile Include="Repository\IMessageService.cs" />
+    <Compile Include="Repository\MessageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -209,10 +210,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\ShowNumber.cshtml" />
+    <Content Include="Views\FizzBuzz\Index.cshtml" />
+    <Content Include="Views\FizzBuzz\DisplayOutput.cshtml" />
+    <AdditionalFiles Include="stylecop.json" />
+    <Content Include="stylecop1.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -235,6 +236,10 @@
       <Project>{A0738524-6EBE-484C-93B2-C887C5769AFB}</Project>
       <Name>FizzBuzz.Business</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
