--- a/FizzBuzz/FizzBuzz.Web/packages.config
+++ b/FizzBuzz/FizzBuzz.Web/packages.config
@@ -24,6 +24,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.11.1" targetFramework="net461" />
